--- a/views/edit_word.erb
+++ b/views/edit_word.erb
@@ -9,7 +9,7 @@
   <button type="submit">Update</button>
 </form>
 
-<form action="/albums/<%= @word.id() %>" method="post">
+<form action="/words/<%= @word.id() %>" method="post">
   <input name="_method" type="hidden" value="delete">
 
   <button type="submit">Delete word</button>
