--- a/views/word.erb
+++ b/views/word.erb
@@ -22,5 +22,5 @@
     <button type="submit" class="btn">ENTER NEW DEFINITION</button>
   </form>
 
-<p><a href="/words/<% @word.id %>/edit">Edit word</a></p>
+<p><a href="/words/<%= @word.id %>/edit">Edit word</a></p>
 <a href="/words">Return to word list</a>
